--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -21,11 +21,19 @@ html{
 	float: right;
 }
 
+#mlh{
+	position: absolute;
+	right: 0;
+	top: 0;
+	z-index: 999;
+	height: 100px;
+}
+
 .fixed_bar{
 	position: fixed;
 	bottom: 0;
 	width: 100vw;
-	min-height: 20px;
+	min-height: 10px;
 	z-index: 9;
 	background-color: $color-black;
 
@@ -104,7 +112,11 @@ label{
 	opacity: 0;
 	
 	overflow-y: hidden;
-	-webkit-overflow-scrolling:touch;
+	&.isIOS{
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
+	}
+	
 	// background-color: black;
 
 	>iframe{
@@ -1299,7 +1311,13 @@ label{
 				@include relativeMiddle();
 			//} ** END INCLUDES
 			
-
+			&:not(.isMobile){
+				.all_events{
+					.day{
+						max-width: 33%;
+					}
+				}
+			}
 			>.all_title{
 				font-weight: 300;
 				font-size: 2em;
@@ -1326,6 +1344,7 @@ label{
 					position: relative;
 					float: left;
 					clear:none;
+					
 					>table{
 						position: relative;
 						float: left;
@@ -1454,7 +1473,7 @@ label{
 							float: left;
 							width: calc(100% - 40px);
 							height: 100%;
-							// background-color: white;
+							background-color: transparent;
 							color: white;
 							border: solid 1px white;
 							border-radius: 5px;
@@ -1474,196 +1493,25 @@ label{
 							//} ** END INCLUDES
 
 							cursor: pointer;
+
+							&.isMobile{
+
+								//{ ** INCLUDES
+									@include noDecoration();
+								//} ** END INCLUDES
+								
+							}
+
+							&:not(.isMobile):hover{
+								background: white;
+								color: black;
+							}
 							
 						}
 					}
 				}
 			}
 		}
-
-
-
-
-
-		>label>.item{
-			height: 100px;
-			border-style: solid;
-			// border-radius: 5px;
-			border-width: 2px;
-			border-color: white;
-			// background-color: rgba(255,255,255, 0.7);
-			width: 40%;
-			margin: 0 5%;
-			padding-right: 1%;
-			float: left;
-			margin-bottom: 40px;
-			font-weight: 300;
-			overflow: hidden;
-
-			//{ ** INCLUDES
-				@include notSelectable();
-				@include noDecoration();
-			//} ** END INCLUDES
-			cursor: pointer;
-			color: white;
-		
-			&.isMobile{
-				width: 86%;
-				>*:not(.content){
-
-					//{ ** INCLUDES
-						@include notSelectable();
-						@include noDecoration();
-						cursor: pointer;
-					//} ** END INCLUDES
-				}
-			}
-
-			&.left:not(.isMobile){
-				clear: left;
-				margin-right: 2.5%;
-			}
-
-			&.right:not(.isMobile){
-				clear: right;
-				margin-left: 2.5%;
-			}
-
-			>.arrow{
-				width: 100px;
-				float: left;
-				background-color: rgba(255,255,255, 0.6);
-				border-right: solid 1px rgba(255,255,255, 0);
-				height: 100px;
-
-				>.element{
-					background-color: $color-black;
-					width: 30px;
-					height: 10px;
-					position: absolute;
-					top: 50%;
-					transform: translateY(-50%);
-
-					&.e1{
-						@include rotate(45);
-						left: 27.5%;
-					}
-
-					&.e2{
-						@include rotate(135);
-						right: 27.5%;
-					}
-				}
-			}
-			>.title{
-
-				//{ ** INCLUDES
-					@include notSelectable();
-				//} ** END INCLUDES
-				
-				width: calc(97% - 101px);
-				float: left;
-				height: 100px;
-				margin-left: 3%;
-				font-size: 18px;
-				cursor: pointer;
-				>div{
-					position: absolute;
-					width: 100%;
-					text-align: center;
-					top: 50%;
-					transform: translateY(-50%);
-				}
-
-
-				
-
-				&.isMobile{
-
-					//{ ** INCLUDES
-						@include notSelectable();
-					//} ** END INCLUDES
-
-					cursor: pointer;
-					
-				}
-
-			}
-
-			>.content{
-				float: left;
-				width: calc(100% - 40px);
-				padding: 20px 20px;
-				border-top: solid 1px $color-black;
-				text-align: center;
-				font-size: 14px;
-				// margin-top: 15px;
-
-				//{ ** INCLUDES
-					@include notSelectable();
-				//} ** END INCLUDES
-				
-			}
-			>.modified{
-				display: none;
-			}
-
-
-		}
-		@keyframes faq-e1-open{
-			from{
-				@include rotate(45);
-			}
-			to{
-				@include rotate(135);
-			}
-		}
-		@keyframes faq-e2-open{
-			from{
-				@include rotate(135);
-			}
-			to{
-				@include rotate(45);
-			}
-		}
-
-		@keyframes faq-arrow-open{
-			from{
-				border-right-color: rgba(255,255,255,0);
-			}
-			to{
-				border-right-color: $color-black;
-			}
-		}
-
-		@keyframes faq-arrow-close{
-			from{
-				border-right-color: $color-black;
-			}
-			to{
-				border-right-color: rgba(255,255,255,0);
-			}
-		}
-		
-		@keyframes faq-e1-close{
-			from{
-				@include rotate(135);
-			}
-			to{
-				@include rotate(45);
-			}
-			
-		}
-		@keyframes faq-e2-close{
-			from{
-				@include rotate(45);
-			}
-			to{
-				@include rotate(135);
-			}
-		}
-		
-		
 	}
 
 	>.sponsors{
@@ -1679,15 +1527,31 @@ label{
 			//} ** END INCLUDES
 			
 		}
+		>.sponsors-img{
+			position: relative;
+			float: left;
+			clear: both;
+			width: 100%;
+			height: 100vh;
+			background-image: url("../../img/spring2017/sponsors.png");
+			background-position: center;
+			background-size: contain;
+			background-repeat: no-repeat;
+
+			//{ ** INCLUDES
+				@include freezeHeight();
+			//} ** END INCLUDES
+			
+		}
 		
 	}
 
-	>.about{
+	>.explore{
 
 		//{ ** INCLUDES
 			@include page-properties-default();
 		//} ** END INCLUDES
-		>.about-title{
+		>.explore-title{
 			//{ ** INCLUDES
 				@include page-title-default();
 			//} ** END INCLUDES
