--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -1609,6 +1609,89 @@ label{
 				@include page-title-default();
 			//} ** END INCLUDES
 		}
+
+		.label{
+			position: relative;
+			float: left;
+			clear: both;
+			font-size: calc(12px + 0.5vw);
+			color: white;
+			font-weight: 300;
+			left: 50%;
+			transform: translateX(-50%);
+		}
+
+		.frame{
+			position: relative;
+			float: left;
+			padding: 40px;
+			width: calc(100% - 80px);
+			clear: left;
+			left: 50%;
+			transform: translateX(-50%);
+
+			&:not(.isMobile){
+				max-width: 50vw;
+			}
+			iframe{
+				border-radius: 2px;
+				width: 100%;
+				border: none;
+			}
+
+
+			&.frame2{
+				iframe{
+					background-color: white;
+				}
+			}
+
+
+			#slack{
+				border-radius: 2px;
+				position: relative;
+				float: left;
+				background-image: url("../../img/spring2017/slack_image.JPG");
+				background-position: center;
+				background-size: cover;
+				background-repeat: no-repeat;
+				width: 100%;
+				min-height: 300px;
+				overflow: hidden;
+				
+				a{
+					position: absolute;
+					bottom: 20px;
+					right: 20px;
+				}
+				.slack_button{
+					position: relative;
+					float: left;
+					width: 100px;
+					height: 30px;
+					background-image: url("../../img/spring2017/slack_button.svg");
+					background-position: center;
+					background-size: contain;
+					background-repeat: no-repeat;
+					cursor: pointer;
+					// margin-top: 75%;
+					
+					// margin-left: 65%;
+					// right: 20px;
+					// transform: translate(20% -20%);
+
+					//{ ** INCLUDES
+						@include freezeHeight();
+					//} ** END INCLUDES
+					
+				}
+
+			}
+
+		}
+
+
+
 	}
 }
 
