--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -1255,7 +1255,7 @@ label {
       clear: both;
       width: 100%;
       height: 100vh;
-      background-image: url("../../img/spring2017/sponsors.png");
+      background-image: url("../../img/spring2017/sponsors-sm.png");
       background-position: center;
       background-size: contain;
       background-repeat: no-repeat;
@@ -1393,6 +1393,10 @@ label {
     max-width: 33%; }
 
   .page > .explore > .frame > #slack {
-    background-image: url("../../img/spring2017/slack_image.JPG"); } }
+    background-image: url("../../img/spring2017/slack_image.JPG"); }
+
+  .page > .sponsors > .sponsors-img {
+    height: 200vh;
+    background-image: url("../../img/spring2017/sponsors.png"); } }
 
 /*# sourceMappingURL=main.css.map */
